
[Test/cassette_TestCommand_Licenses/TestCommand_Licenses/Licenses_in_summary_mode_json - 1]
{
  "results": [
    {
      "query": {
        "package": {
          "name": "babel",
          "ecosystem": "npm"
        },
        "version": "6.23.0"
      }
    },
    {
      "query": {
        "package": {
          "name": "human-signals",
          "ecosystem": "npm"
        },
        "version": "5.0.0"
      }
    },
    {
      "query": {
        "package": {
          "name": "ms",
          "ecosystem": "npm"
        },
        "version": "2.1.3"
      }
    },
    {
      "query": {
        "package": {
          "name": "type-fest",
          "ecosystem": "npm"
        },
        "version": "4.26.1"
      }
    }
  ]
}

---

[Test/cassette_TestCommand_Licenses/TestCommand_Licenses/Licenses_with_expressions - 1]
{
  "results": [
    {
      "query": {
        "package": {
          "name": "babel",
          "ecosystem": "npm"
        },
        "version": "6.23.0"
      }
    },
    {
      "query": {
        "package": {
          "name": "human-signals",
          "ecosystem": "npm"
        },
        "version": "5.0.0"
      }
    },
    {
      "query": {
        "package": {
          "name": "ms",
          "ecosystem": "npm"
        },
        "version": "2.1.3"
      }
    },
    {
      "query": {
        "package": {
          "name": "type-fest",
          "ecosystem": "npm"
        },
        "version": "4.26.1"
      }
    }
  ]
}

---

[Test/cassette_TestCommand_Licenses/TestCommand_Licenses/Licenses_with_invalid_expression_in_config - 1]
{
  "results": [
    {
      "query": {
        "package": {
          "name": "babel",
          "ecosystem": "npm"
        },
        "version": "6.23.0"
      }
    },
    {
      "query": {
        "package": {
          "name": "human-signals",
          "ecosystem": "npm"
        },
        "version": "5.0.0"
      }
    },
    {
      "query": {
        "package": {
          "name": "ms",
          "ecosystem": "npm"
        },
        "version": "2.1.3"
      }
    },
    {
      "query": {
        "package": {
          "name": "type-fest",
          "ecosystem": "npm"
        },
        "version": "4.26.1"
      }
    }
  ]
}

---

[Test/cassette_TestCommand_Licenses/TestCommand_Licenses/No_license_violations_and_show-all-packages_in_json - 1]
{
  "results": [
    {
      "query": {
        "package": {
          "name": "babel",
          "ecosystem": "npm"
        },
        "version": "6.23.0"
      }
    },
    {
      "query": {
        "package": {
          "name": "human-signals",
          "ecosystem": "npm"
        },
        "version": "5.0.0"
      }
    },
    {
      "query": {
        "package": {
          "name": "ms",
          "ecosystem": "npm"
        },
        "version": "2.1.3"
      }
    },
    {
      "query": {
        "package": {
          "name": "type-fest",
          "ecosystem": "npm"
        },
        "version": "4.26.1"
      }
    }
  ]
}

---

[Test/cassette_TestCommand_Licenses/TestCommand_Licenses/No_vulnerabilities_but_license_violations_with_allowlist - 1]
{
  "results": [
    {
      "query": {
        "package": {
          "name": "balanced-match",
          "ecosystem": "npm"
        },
        "version": "1.0.2"
      }
    }
  ]
}

---

[Test/cassette_TestCommand_Licenses/TestCommand_Licenses/No_vulnerabilities_with_license_summary - 1]
{
  "results": [
    {
      "query": {
        "package": {
          "name": "ansi-html",
          "ecosystem": "npm"
        },
        "version": "0.0.8"
      }
    },
    {
      "query": {
        "package": {
          "name": "ast",
          "ecosystem": "RubyGems"
        },
        "version": "2.4.2"
      }
    },
    {
      "query": {
        "package": {
          "name": "balanced-match",
          "ecosystem": "npm"
        },
        "version": "1.0.2"
      }
    },
    {
      "query": {
        "package": {
          "name": "sentry/sdk",
          "ecosystem": "Packagist"
        },
        "version": "2.0.4"
      }
    }
  ]
}

---

[Test/cassette_TestCommand_Licenses/TestCommand_Licenses/No_vulnerabilities_with_license_summary#01 - 1]
{
  "results": [
    {
      "query": {
        "package": {
          "name": "alpine-baselayout",
          "ecosystem": "Alpine"
        },
        "version": "3.4.0-r0"
      }
    },
    {
      "query": {
        "package": {
          "name": "alpine-baselayout-data",
          "ecosystem": "Alpine"
        },
        "version": "3.4.0-r0"
      }
    },
    {
      "query": {
        "package": {
          "name": "alpine-keys",
          "ecosystem": "Alpine"
        },
        "version": "2.4-r1"
      }
    },
    {
      "vulns": [
        {
          "id": "GHSA-whgm-jr23-g3j9",
          "modified": "<RFC3339 date with the year 2023>"
        }
      ],
      "query": {
        "package": {
          "name": "ansi-html",
          "ecosystem": "npm"
        },
        "version": "0.0.1"
      }
    },
    {
      "query": {
        "package": {
          "name": "apk-tools",
          "ecosystem": "Alpine"
        },
        "version": "2.12.10-r1"
      }
    },
    {
      "query": {
        "package": {
          "name": "ast",
          "ecosystem": "RubyGems"
        },
        "version": "2.4.2"
      }
    },
    {
      "query": {
        "package": {
          "name": "balanced-match",
          "ecosystem": "npm"
        },
        "version": "1.0.2"
      }
    },
    {
      "query": {
        "package": {
          "name": "busybox-binsh",
          "ecosystem": "Alpine"
        },
        "version": "1.36.1-r27"
      }
    },
    {
      "query": {
        "package": {
          "name": "ca-certificates-bundle",
          "ecosystem": "Alpine"
        },
        "version": "20220614-r4"
      }
    },
    {
      "query": {
        "package": {
          "name": "libc-utils",
          "ecosystem": "Alpine"
        },
        "version": "0.7.2-r3"
      }
    },
    {
      "query": {
        "package": {
          "name": "libcrypto3",
          "ecosystem": "Alpine"
        },
        "version": "3.0.8-r0"
      }
    },
    {
      "query": {
        "package": {
          "name": "libssl3",
          "ecosystem": "Alpine"
        },
        "version": "3.0.8-r0"
      }
    },
    {
      "vulns": [
        {
          "id": "ALPINE-CVE-2025-26519",
          "modified": "<RFC3339 date with the year 2025>"
        }
      ],
      "query": {
        "package": {
          "name": "musl",
          "ecosystem": "Alpine"
        },
        "version": "1.2.3-r4"
      }
    },
    {
      "query": {
        "package": {
          "name": "musl-utils",
          "ecosystem": "Alpine"
        },
        "version": "1.2.3-r4"
      }
    },
    {
      "query": {
        "package": {
          "name": "scanelf",
          "ecosystem": "Alpine"
        },
        "version": "1.3.5-r1"
      }
    },
    {
      "query": {
        "package": {
          "name": "sentry/sdk",
          "ecosystem": "Packagist"
        },
        "version": "2.0.4"
      }
    },
    {
      "query": {
        "package": {
          "name": "ssl_client",
          "ecosystem": "Alpine"
        },
        "version": "1.36.1-r27"
      }
    },
    {
      "vulns": [
        {
          "id": "ALPINE-CVE-2026-22184",
          "modified": "<RFC3339 date with the year 2026>"
        },
        {
          "id": "ALPINE-CVE-2026-27171",
          "modified": "<RFC3339 date with the year 2026>"
        }
      ],
      "query": {
        "package": {
          "name": "zlib",
          "ecosystem": "Alpine"
        },
        "version": "1.2.13-r0"
      }
    }
  ]
}

---

[Test/cassette_TestCommand_Licenses/TestCommand_Licenses/No_vulnerabilities_with_license_summary_in_markdown - 1]
{
  "results": [
    {
      "query": {
        "package": {
          "name": "alpine-baselayout",
          "ecosystem": "Alpine"
        },
        "version": "3.4.0-r0"
      }
    },
    {
      "query": {
        "package": {
          "name": "alpine-baselayout-data",
          "ecosystem": "Alpine"
        },
        "version": "3.4.0-r0"
      }
    },
    {
      "query": {
        "package": {
          "name": "alpine-keys",
          "ecosystem": "Alpine"
        },
        "version": "2.4-r1"
      }
    },
    {
      "vulns": [
        {
          "id": "GHSA-whgm-jr23-g3j9",
          "modified": "<RFC3339 date with the year 2023>"
        }
      ],
      "query": {
        "package": {
          "name": "ansi-html",
          "ecosystem": "npm"
        },
        "version": "0.0.1"
      }
    },
    {
      "query": {
        "package": {
          "name": "apk-tools",
          "ecosystem": "Alpine"
        },
        "version": "2.12.10-r1"
      }
    },
    {
      "query": {
        "package": {
          "name": "ast",
          "ecosystem": "RubyGems"
        },
        "version": "2.4.2"
      }
    },
    {
      "query": {
        "package": {
          "name": "balanced-match",
          "ecosystem": "npm"
        },
        "version": "1.0.2"
      }
    },
    {
      "query": {
        "package": {
          "name": "busybox-binsh",
          "ecosystem": "Alpine"
        },
        "version": "1.36.1-r27"
      }
    },
    {
      "query": {
        "package": {
          "name": "ca-certificates-bundle",
          "ecosystem": "Alpine"
        },
        "version": "20220614-r4"
      }
    },
    {
      "query": {
        "package": {
          "name": "libc-utils",
          "ecosystem": "Alpine"
        },
        "version": "0.7.2-r3"
      }
    },
    {
      "query": {
        "package": {
          "name": "libcrypto3",
          "ecosystem": "Alpine"
        },
        "version": "3.0.8-r0"
      }
    },
    {
      "query": {
        "package": {
          "name": "libssl3",
          "ecosystem": "Alpine"
        },
        "version": "3.0.8-r0"
      }
    },
    {
      "vulns": [
        {
          "id": "ALPINE-CVE-2025-26519",
          "modified": "<RFC3339 date with the year 2025>"
        }
      ],
      "query": {
        "package": {
          "name": "musl",
          "ecosystem": "Alpine"
        },
        "version": "1.2.3-r4"
      }
    },
    {
      "query": {
        "package": {
          "name": "musl-utils",
          "ecosystem": "Alpine"
        },
        "version": "1.2.3-r4"
      }
    },
    {
      "query": {
        "package": {
          "name": "scanelf",
          "ecosystem": "Alpine"
        },
        "version": "1.3.5-r1"
      }
    },
    {
      "query": {
        "package": {
          "name": "sentry/sdk",
          "ecosystem": "Packagist"
        },
        "version": "2.0.4"
      }
    },
    {
      "query": {
        "package": {
          "name": "ssl_client",
          "ecosystem": "Alpine"
        },
        "version": "1.36.1-r27"
      }
    },
    {
      "vulns": [
        {
          "id": "ALPINE-CVE-2026-22184",
          "modified": "<RFC3339 date with the year 2026>"
        },
        {
          "id": "ALPINE-CVE-2026-27171",
          "modified": "<RFC3339 date with the year 2026>"
        }
      ],
      "query": {
        "package": {
          "name": "zlib",
          "ecosystem": "Alpine"
        },
        "version": "1.2.13-r0"
      }
    }
  ]
}

---

[Test/cassette_TestCommand_Licenses/TestCommand_Licenses/No_vulnerabilities_with_license_summary_in_markdown#01 - 1]
{
  "results": [
    {
      "query": {
        "package": {
          "name": "ansi-html",
          "ecosystem": "npm"
        },
        "version": "0.0.8"
      }
    },
    {
      "query": {
        "package": {
          "name": "ast",
          "ecosystem": "RubyGems"
        },
        "version": "2.4.2"
      }
    },
    {
      "query": {
        "package": {
          "name": "balanced-match",
          "ecosystem": "npm"
        },
        "version": "1.0.2"
      }
    },
    {
      "query": {
        "package": {
          "name": "sentry/sdk",
          "ecosystem": "Packagist"
        },
        "version": "2.0.4"
      }
    }
  ]
}

---

[Test/cassette_TestCommand_Licenses/TestCommand_Licenses/Show_all_Packages_with_license_summary_in_json - 1]
{
  "results": [
    {
      "query": {
        "package": {
          "name": "babel",
          "ecosystem": "npm"
        },
        "version": "6.23.0"
      }
    },
    {
      "query": {
        "package": {
          "name": "human-signals",
          "ecosystem": "npm"
        },
        "version": "5.0.0"
      }
    },
    {
      "query": {
        "package": {
          "name": "ms",
          "ecosystem": "npm"
        },
        "version": "2.1.3"
      }
    },
    {
      "query": {
        "package": {
          "name": "type-fest",
          "ecosystem": "npm"
        },
        "version": "4.26.1"
      }
    }
  ]
}

---

[Test/cassette_TestCommand_Licenses/TestCommand_Licenses/Some_packages_with_ignored_licenses - 1]
{
  "results": [
    {
      "query": {
        "package": {
          "name": "alpine-baselayout",
          "ecosystem": "Alpine"
        },
        "version": "3.4.0-r0"
      }
    },
    {
      "query": {
        "package": {
          "name": "alpine-baselayout-data",
          "ecosystem": "Alpine"
        },
        "version": "3.4.0-r0"
      }
    },
    {
      "query": {
        "package": {
          "name": "alpine-keys",
          "ecosystem": "Alpine"
        },
        "version": "2.4-r1"
      }
    },
    {
      "query": {
        "package": {
          "name": "apk-tools",
          "ecosystem": "Alpine"
        },
        "version": "2.12.10-r1"
      }
    },
    {
      "query": {
        "package": {
          "name": "ast",
          "ecosystem": "RubyGems"
        },
        "version": "2.4.2"
      }
    },
    {
      "query": {
        "package": {
          "name": "busybox-binsh",
          "ecosystem": "Alpine"
        },
        "version": "1.36.1-r27"
      }
    },
    {
      "query": {
        "package": {
          "name": "ca-certificates-bundle",
          "ecosystem": "Alpine"
        },
        "version": "20220614-r4"
      }
    },
    {
      "vulns": [
        {
          "id": "GHSA-9f46-5r25-5wfm",
          "modified": "<RFC3339 date with the year 2026>"
        }
      ],
      "query": {
        "package": {
          "name": "league/flysystem",
          "ecosystem": "Packagist"
        },
        "version": "1.0.8"
      }
    },
    {
      "query": {
        "package": {
          "name": "libc-utils",
          "ecosystem": "Alpine"
        },
        "version": "0.7.2-r3"
      }
    },
    {
      "query": {
        "package": {
          "name": "libcrypto3",
          "ecosystem": "Alpine"
        },
        "version": "3.0.8-r0"
      }
    },
    {
      "query": {
        "package": {
          "name": "libssl3",
          "ecosystem": "Alpine"
        },
        "version": "3.0.8-r0"
      }
    },
    {
      "vulns": [
        {
          "id": "ALPINE-CVE-2025-26519",
          "modified": "<RFC3339 date with the year 2025>"
        }
      ],
      "query": {
        "package": {
          "name": "musl",
          "ecosystem": "Alpine"
        },
        "version": "1.2.3-r4"
      }
    },
    {
      "query": {
        "package": {
          "name": "musl-utils",
          "ecosystem": "Alpine"
        },
        "version": "1.2.3-r4"
      }
    },
    {
      "query": {
        "package": {
          "name": "scanelf",
          "ecosystem": "Alpine"
        },
        "version": "1.3.5-r1"
      }
    },
    {
      "query": {
        "package": {
          "name": "sentry/sdk",
          "ecosystem": "Packagist"
        },
        "version": "2.0.4"
      }
    },
    {
      "query": {
        "package": {
          "name": "ssl_client",
          "ecosystem": "Alpine"
        },
        "version": "1.36.1-r27"
      }
    },
    {
      "query": {
        "package": {
          "name": "stdlib",
          "ecosystem": "Go"
        },
        "version": "1.99.9"
      }
    },
    {
      "query": {
        "package": {
          "name": "toolchain",
          "ecosystem": "Go"
        },
        "version": "1.99.9"
      }
    },
    {
      "vulns": [
        {
          "id": "ALPINE-CVE-2026-22184",
          "modified": "<RFC3339 date with the year 2026>"
        },
        {
          "id": "ALPINE-CVE-2026-27171",
          "modified": "<RFC3339 date with the year 2026>"
        }
      ],
      "query": {
        "package": {
          "name": "zlib",
          "ecosystem": "Alpine"
        },
        "version": "1.2.13-r0"
      }
    }
  ]
}

---

[Test/cassette_TestCommand_Licenses/TestCommand_Licenses/Some_packages_with_ignored_licenses#01 - 1]
{
  "results": [
    {
      "query": {
        "package": {
          "name": "ast",
          "ecosystem": "RubyGems"
        },
        "version": "2.4.2"
      }
    },
    {
      "vulns": [
        {
          "id": "GHSA-9f46-5r25-5wfm",
          "modified": "<RFC3339 date with the year 2026>"
        }
      ],
      "query": {
        "package": {
          "name": "league/flysystem",
          "ecosystem": "Packagist"
        },
        "version": "1.0.8"
      }
    },
    {
      "query": {
        "package": {
          "name": "sentry/sdk",
          "ecosystem": "Packagist"
        },
        "version": "2.0.4"
      }
    },
    {
      "query": {
        "package": {
          "name": "stdlib",
          "ecosystem": "Go"
        },
        "version": "1.99.9"
      }
    },
    {
      "query": {
        "package": {
          "name": "toolchain",
          "ecosystem": "Go"
        },
        "version": "1.99.9"
      }
    }
  ]
}

---

[Test/cassette_TestCommand_Licenses/TestCommand_Licenses/Some_packages_with_license_violations_and_show-all-packages_in_json - 1]
{
  "results": [
    {
      "query": {
        "package": {
          "name": "babel",
          "ecosystem": "npm"
        },
        "version": "6.23.0"
      }
    },
    {
      "query": {
        "package": {
          "name": "human-signals",
          "ecosystem": "npm"
        },
        "version": "5.0.0"
      }
    },
    {
      "query": {
        "package": {
          "name": "ms",
          "ecosystem": "npm"
        },
        "version": "2.1.3"
      }
    },
    {
      "query": {
        "package": {
          "name": "type-fest",
          "ecosystem": "npm"
        },
        "version": "4.26.1"
      }
    }
  ]
}

---

[Test/cassette_TestCommand_Licenses/TestCommand_Licenses/Some_packages_with_license_violations_in_json - 1]
{
  "results": [
    {
      "query": {
        "package": {
          "name": "babel",
          "ecosystem": "npm"
        },
        "version": "6.23.0"
      }
    },
    {
      "query": {
        "package": {
          "name": "human-signals",
          "ecosystem": "npm"
        },
        "version": "5.0.0"
      }
    },
    {
      "query": {
        "package": {
          "name": "ms",
          "ecosystem": "npm"
        },
        "version": "2.1.3"
      }
    },
    {
      "query": {
        "package": {
          "name": "type-fest",
          "ecosystem": "npm"
        },
        "version": "4.26.1"
      }
    }
  ]
}

---

[Test/cassette_TestCommand_Licenses/TestCommand_Licenses/Vulnerabilities_and_all_license_violations_allowlisted - 1]
{
  "results": [
    {
      "vulns": [
        {
          "id": "GHSA-whgm-jr23-g3j9",
          "modified": "<RFC3339 date with the year 2023>"
        }
      ],
      "query": {
        "package": {
          "name": "ansi-html",
          "ecosystem": "npm"
        },
        "version": "0.0.1"
      }
    }
  ]
}

---

[Test/cassette_TestCommand_Licenses/TestCommand_Licenses/Vulnerabilities_and_license_summary - 1]
{
  "results": [
    {
      "vulns": [
        {
          "id": "GHSA-whgm-jr23-g3j9",
          "modified": "<RFC3339 date with the year 2023>"
        }
      ],
      "query": {
        "package": {
          "name": "ansi-html",
          "ecosystem": "npm"
        },
        "version": "0.0.1"
      }
    }
  ]
}

---

[Test/cassette_TestCommand_Licenses/TestCommand_Licenses/Vulnerabilities_and_license_violations_with_allowlist - 1]
{
  "results": [
    {
      "vulns": [
        {
          "id": "GHSA-whgm-jr23-g3j9",
          "modified": "<RFC3339 date with the year 2023>"
        }
      ],
      "query": {
        "package": {
          "name": "ansi-html",
          "ecosystem": "npm"
        },
        "version": "0.0.1"
      }
    }
  ]
}

---
